<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/layout"
        style="@style/FirstLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            style="@style/Avatar"
            android:contentDescription="@string/user_profile_image"
            android:src="@drawable/ic_generic_avatar" />

        <LinearLayout style="@style/SecondLayout">

            <TextView
                android:id="@+id/userName"
                style="@style/Name"
                android:text="@string/user_name_default" />

            <TextView
                android:id="@+id/onlineStatus"
                style="@style/OnlineStatus"
                android:text="@string/user_online_status_default" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>