<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailsUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/details_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/detailsUserHobby"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_hobby"
            android:textAlignment="center"
            android:textSize="20sp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/detailsImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:elevation="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground"/>

        <TextView
            android:id="@+id/detailsUserStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/details_status"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/details_follow" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <LinearLayout style="@style/DetailsFirstLayout">

                <LinearLayout style="@style/DetailsSecondLayout">

                    <TextView
                        android:id="@+id/detailsFollowers"
                        android:text="@string/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/details_followers"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    style="@style/DetailsSecondLayout">

                    <TextView
                        android:id="@+id/detailsPosts"
                        android:text="@string/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/details_posts"
                        android:textSize="13sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_marginStart="70dp"
                android:layout_marginEnd="70dp"
                style="@style/DetailsFirstLayout">

                <LinearLayout style="@style/DetailsSecondLayout">

                    <TextView
                        android:id="@+id/detailsFollowing"
                        android:text="@string/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/details_following"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    style="@style/DetailsSecondLayout">

                    <TextView
                        android:id="@+id/detailsReach"
                        android:text="@string/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/details_reach"
                        android:textSize="13sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/DetailsFirstLayout">

                <LinearLayout style="@style/DetailsSecondLayout">

                    <TextView
                        android:id="@+id/detailsScore"
                        android:text="@string/default_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/details_social_score"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="30dp"
                    style="@style/DetailsSecondLayout">

                    <TextView
                        android:id="@+id/detailsSharemeter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/default_value"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/details_sharemeter"
                        android:textSize="13sp" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</ScrollView>
